--- a/Project Ganymede/Project Ganymede/Project Ganymede.csproj
+++ b/Project Ganymede/Project Ganymede/Project Ganymede.csproj
@@ -52,6 +52,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -60,6 +63,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -73,6 +77,60 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Backgrond.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Manager.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Fierfox.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Opera.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Opera2.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\dota 2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Eve online.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\age of wonders.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Spotify.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Spotify2.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Spotify2 copy.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Planetside 2.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Planetside 21.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\terminal.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Terminal2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Terminal3.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Terminal4.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Terminal41.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
